deploy/src/main/deploy/resource-descriptors/hono-adapter-amqp/hono-adapter-amqp-vertx-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: hono-adapter-amqp-vertx
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-adapter-amqp-vertx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hono-adapter-amqp-vertx
      group: ${project.groupId}
  template:
    metadata:
      labels:
        app: hono-adapter-amqp-vertx
        version: "${project.version}"
        group: ${project.groupId}
    spec:
      containers:
      - image: eclipse/hono-adapter-amqp-vertx:${project.version}
        imagePullPolicy: IfNotPresent
        name: eclipse-hono-adapter-amqp-vertx
        ports:
        - containerPort: 8088
          protocol: TCP
        - containerPort: 5671
          protocol: TCP
        - containerPort: 5672
          protocol: TCP
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /etc/hono
          name: conf
          readOnly: true
        resources:
          limits:
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 180
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 10
      volumes:
      - name: conf
        secret:
          secretName: hono-adapter-amqp-vertx-conf
