deploy/src/main/deploy/resource-descriptors/hono-adapter-amqp/hono-adapter-amqp-vertx-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono-adapter-amqp-vertx
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-adapter-amqp-vertx
spec:
  ports:
  - name: amqp
    nodePort: 30040
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: amqps
    nodePort: 30041
    port: 5671
    protocol: TCP
    targetPort: 5671
  selector:
    app: hono-adapter-amqp-vertx
    group: ${project.groupId}
  type: NodePort
