deploy/src/main/deploy/resource-descriptors/hono-adapter-amqp/hono-adapter-amqp-vertx-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: hono-adapter-amqp-vertx
    provider: fabric8
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-adapter-amqp-vertx
spec:
  port:
    targetPort: 5672
  to:
    kind: Service
    name: hono-adapter-amqp-vertx
